<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2014 Tedroid developers

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- APP NAME -->
    <string name="app_name">Tedroid</string>

    <!-- ACTIVITY TITLES -->
    <string name="settings_activity_title">Configuración</string>

    <!-- MAIN MENU ACTIVITY -->
    <string name="tedroid_title">TEDROID</string>
    <string name="play_button_label">JUGAR</string>
    <string name="scores_button_label">PUNTAJES</string>
    <string name="leaderboards_button_label">MARCADORES</string>
    <string name="achievements_button_label">LOGROS</string>
    <string name="settings_button_label">CONFIGURACIÓN</string>
    <string name="offline_warn_title">Jugar sin iniciar sesión en Google</string>
    <string name="offline_warn_message">Si juegas sin inciar sesión no podrás compartir puntajes con amigos ni conseguir logros en el juego</string>
    <string name="offline_warn_understand">Entiendo y jugaré así</string>
    <string name="offline_warn_sign_in">Iniciar sesión</string>
    <string name="sign_in_why">Inicia sesión en Google para poder compartir tus puntajes y logros</string>
    <string name="signed_user_photo_description">Mi foto</string>
    <string name="sign_out_title">Confirmar cierre de sesión en Google</string>
    <string name="sign_out_message">Vas a cerrar sesión como %s en Tedroid</string>

    <!-- SCORES ACTIVITY -->
    <string name="points_header">Puntos</string>
    <string name="level_header">Nivel</string>
    <string name="lines_header">Lineas</string>
    <string name="date_header">Fecha</string>
    <string name="no_scores_message">No tienes puntajes todavía</string>

    <!-- GAME ACTIVITY -->
    <string name="score_text">Puntaje:</string>
    <string name="level_text">Nivel %s</string>
    <string name="lines_text">Lineas:</string>
    <string name="next_tetromino_text">Siguiente:</string>
    <string name="pause_text">Pausa</string>
    <string name="resume_text">Resumir</string>
    <string name="restart_text">Reiniciar</string>
    <string name="game_over_text">Game Over</string>
    <string name="exit_message">Tu avance en el juego se perderá si regresas al menu principal ¿De verdad quieres hacerlo?</string>
    <string name="restart_message">¿De verdad quieres reiniciar la partida?</string>
    <string name="instruction_image_description">Imagen de ejemplo</string>
    <string name="drag_instruction_title">Jalar</string>
    <string name="drag_instruction_text">Jala la pieza para moverla hacia los lados o hacia abajo</string>
    <string name="long_press_instruction_title">Presionar</string>
    <string name="long_press_instruction_text">Presiona para dejar caer la pieza fuerte hacia abajo</string>
    <string name="single_tap_instruction_title">Tocar</string>
    <string name="single_tap_instruction_text">Toca para rotar la pieza</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="sfx_category_title">Audio</string>
    <string name="data_category_title">Datos</string>
    <string name="about_category_title">Acerca de</string>
    <string name="music_type_pref_title">Tipo de música</string>
    <string name="music_type_pref_summary">Tipo: %s</string>
    <string-array name="music_type_entries">
        <item>Música A</item>
        <item>Música B</item>
        <item>Música C</item>
        <item>Sin música</item>
    </string-array>
    <string name="sounds_pref_title">Sonidos</string>
    <string name="sounds_pref_on">Activados</string>
    <string name="sounds_pref_off">Desactivados</string>
    <string name="delete_scores_pref_title">Borrar puntajes</string>
    <string name="delete_scores_warn_title">¿Seguro que quieres borrar tus puntajes?</string>
    <string name="delete_scores_warn_message">Si borras tus puntajes, no podrás recuperarlos y puede que afecte tu progreso en los logros que te faltan por desbloquear</string>
    <string name="done_delete_scores_message">Puntajes borrados</string>
    <string name="wiki_pref_title">Wiki de Tedroid</string>
    <string name="wiki_pref_summary">¿Cómo jugar?, Logros, FAQs, etc.</string>
    <string name="github_site_pref_title">Tedroid en GitHub</string>
    <string name="github_site_pref_summary">Código, wikis, problemas conocidos</string>
    <string name="open_source_licenses_pref_title">Licencias de código abierto</string>
    <string name="open_source_licenses_pref_summary">Detalles de las licencias de software de código abierto</string>
    <string name="version_pref_title">Versión de la aplicación</string>

    <!-- GAME HELPER -->
    <string name="gamehelper_sign_in_failed">No se pudo iniciar sesión. Por favor revise la conexión a internet y vuelva a intentarlo</string>
    <string name="gamehelper_app_misconfigured">La aplicación no esta configurada correctamente. Compruebe que el nombre del paquete y el certificado coinciden con el ID de cliente creado en la Consola de Google Play para desarrolladores. Además, si la aplicación aún no se publica, compruebe que la cuenta con la que está intentando iniciar sesión con aparece como una cuenta de tester. Consulte los registros para obtener más información</string>
    <string name="gamehelper_license_failed">Revisión de licencia falló</string>
    <string name="gamehelper_unknown_error">Error desconocido</string>

</resources>