<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2014 Tedroid developers

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tedroid_repeatable_background"
    android:gravity="center|center_vertical"
    tools:context=".activity.MainMenuActivity" >

    <RelativeLayout
        android:id="@+id/signed_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu_layout"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/menu_layout"
        android:layout_marginBottom="15dp"
        android:onClick="onSignedUserClick"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/signed_user_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/signed_user_photo_description"
            android:scaleType="centerCrop"
            android:src="@drawable/no_profile_image" />

        <TextView
            android:id="@+id/signed_user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/signed_user_photo"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/signed_user_photo"
            android:gravity="center_vertical|right"
            android:textColor="@android:color/white"
            android:textSize="@dimen/secondary_text_size"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <LinearLayout
        android:id="@id/menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signed_user_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tedroid_title"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/play_button"
            style="@style/TedroidYellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="onPlayButtonClick"
            android:text="@string/play_button_label" />

        <Button
            android:id="@+id/scores_button"
            style="@style/TedroidYellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="onScoresButtonClick"
            android:text="@string/scores_button_label" />

        <Button
            android:id="@+id/leaderboards_button"
            style="@style/TedroidYellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="onLeaderboardsButtonClick"
            android:text="@string/leaderboards_button_label"
            android:visibility="gone" />

        <Button
            android:id="@+id/achievements_button"
            style="@style/TedroidYellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="onAchievementsButtonClick"
            android:text="@string/achievements_button_label"
            android:visibility="gone" />

        <Button
            android:id="@+id/settings_button"
            style="@style/TedroidYellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="onSettingsButtonClick"
            android:text="@string/settings_button_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/menu_layout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sign_in_why_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/sign_in_why"
            android:textColor="@android:color/white"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

</RelativeLayout>